--- a/style.css
+++ b/style.css
@@ -2498,7 +2498,7 @@ padding:3px;
 .loginform div.login{
   padding-top: 1rem;
 }
-.loginform {
+.loginform input.form_submit {
 width:100%; 
 margin:10px 0 0 0; 
 text-align:center;
