--- a/style.css
+++ b/style.css
@@ -2453,12 +2453,12 @@ font-style:italic;
 }
 
 .login a button {
-  width: 70%;
+  width: 80%;
   background-color: rgba(48, 204, 162, 1);
   border: none;
   height: 40px;
   color: #FFFFFF;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 .loginform{
 width:90%;
@@ -2477,21 +2477,29 @@ font-weight:400;
 clear:both;
 float:left;
 }
-.loginform input.form_input{
-padding:10px 3%; 
-width:93%; 
-margin:0 0 15px 0;
-border-bottom:1px solid #d5d5d5;
-border-left:none;
-border-right:none;
-border-top:none;
-background-color:#ffffff;
+.loginform input.form_input {
+  width: 100%;
+  margin: 0 0 20px 0;
 color:#000000;
+/* border: 0.5px solid rgba(0, 0, 0, 0.268); */
+  border: none;
 /* -webkit-appearance: none; */
-padding-top: 1rem;
+padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+  border-radius: 18px;
+  padding-left: 1rem;
+  background-color: #f5f5f5;
 }
 .loginform input.form_input:focus{
  background-color:#f5f5f5;
+border: 1px solid rgba(0, 193, 140, 1);
+}
+
+.loginform label {
+  color: #0000009b;
+  font-size: 15px;
+  font-family: sans-serif;
+  padding: 0.3rem;
 }
 .loginform .form_select{
 padding:2% 3%; 
@@ -3301,6 +3309,7 @@ padding:15px 0 0 0;
   font-size: 25px;
   font-family: 'Verdana';
   font-weight: 800;
+  
 }
 .data-page .header-survey a img {
   width: 20px;
@@ -3388,7 +3397,6 @@ padding:15px 0 0 0;
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.067), 0 6px 20px 0 rgba(0, 0, 0, 0.136);
   border-radius: 15px;
   padding-top: 10px;
   padding-bottom: 40px;
@@ -3429,8 +3437,8 @@ padding:15px 0 0 0;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 5px;
-}
 
+}
 .calendar-day {
   width: 100%;
   padding: 5px;  
@@ -3477,6 +3485,7 @@ padding:15px 0 0 0;
   height: 0px;
   color: #ffffff;
 }
+
 .content-block .posision-date span{
   font-size: 20px;
   color: #ffffff;
@@ -3509,6 +3518,10 @@ padding:15px 0 0 0;
   padding-top: 1rem;
   width: 50%;
   font-family: 'geneva';
+}
+.data-calendar .left-boxs iframe {
+  height: 60%;
+  width: 70%;
 }
 .data-calendar .right-boxs{
   padding-top: 0.9rem;
@@ -3884,11 +3897,13 @@ width: 90%;
   padding-top: 3rem;
 }
 
-.select input[type="radio"]:checked + label {
-  color: rgb(255, 255, 255);
-  background-color: rgba(0, 193, 140, 1);
+.select input[type="radio"]:checked+label {
   width: 100%;
   height: 40px;
+  background-color: rgba(0, 193, 142, 0.075);
+    border: 0.5px solid rgba(0, 193, 140, 1);
+    color: rgba(0, 193, 142, 0.742);
+    border-radius: 10px;
 }
 .select input[type="radio"] {
   display: none;
@@ -3905,6 +3920,7 @@ width: 90%;
   background: white;
   box-shadow: 2px 3px 6px -2px rgba(0, 0, 0, 0.262);
   position: relative;
+  border-radius: 10px;
 }
 .content-block .btn-pause{
   width: 100%;
@@ -4005,7 +4021,7 @@ border: 0.4px solid #ffffff;
 }
 .content-block  .success .btn-select-method{
   width: 100%;
-  padding-top: 6rem;
+  padding-top: 5rem;
 }
 .content-block  .success .btn-home{
   width: 100%;
@@ -4214,4 +4230,12 @@ border: 0.4px solid #ffffff;
 
 .table-data tr:hover {
   background-color: #ddd;
+}
+/*===============================================*/
+/* 25. MEDIA MAPS */
+/*===============================================*/
+
+iframe {
+  width: 100%;
+  height: 100vh;
 }
